# cave-diver

./: .gitignore  Dockerfile  pyproject.toml
cave_data_viewer/api/: __init__.py  caches.py  config.py
cave_data_viewer/api/endpoints/: __init__.py  connectivity.py  datastacks.py  embeddings.py  examples.py  plots.py  table_rows.py
cave_data_viewer/api/services/: categorical.py  cell_id.py  datastack_config.py  decoration.py  links.py  neuron.py  object_store.py  plots.py  recipe_registry.py  swr.py  timing.py
cave_data_viewer/api/services/embeddings/: __init__.py  decoration_join.py  knn.py  loader.py  manifest.py  query.py  resolver.py  source.py
cave_data_viewer/api/services/spatial/: cache.py
config/datastacks/: minnie65_phase3_v1.yaml  minnie65_public.yaml
config/examples/minnie65_phase3_v1/: l23-pyr-deep-dive.yaml
docs/: datastack-config.md  feature-explorer-plan.md  scaffolder-pattern.md  setting-up-a-datastack.md  static-mode-vision.md
docs/superpowers/plans/: 2026-05-18-feature-table-discovery.md
docs/superpowers/specs/: 2026-05-17-examples-design.md  2026-05-18-feature-table-discovery-design.md
frontend/: index.html
frontend/src/: App.tsx  styles.css
frontend/src/api/: embeddings.ts  queries.ts  types.ts
frontend/src/components/: AnalyticsRail.tsx  CellDetails.tsx  CellFilterMenu.tsx  CellFilterPanel.tsx  DynamicPlotPanel.tsx  ExampleCard.tsx  ExamplesPage.tsx  IdentityStrip.tsx  LandingPage.tsx  NeuronView.tsx  PartnersPane.tsx  PartnersTable.tsx  PlotPanel.tsx  ShareMenu.tsx  Sidebar.tsx  TableMetadata.tsx  TableRowsView.tsx  Workspace.tsx
frontend/src/components/explore/: ChannelPicker.tsx  CollapsibleSection.tsx  ColorByPicker.tsx  DecorationPicker.tsx  EmbeddingPicker.tsx  EmbeddingScatter.tsx  ExplorerShareMenu.tsx  FeatureExplorer.tsx  GrowSelectionPanel.tsx  RangeSlider.tsx  SelectionBuilderPanel.tsx  SizeRangeSlider.tsx  SummaryPanel.tsx  UniverseScatter.tsx
frontend/src/plots/: urlState.ts
frontend/src/tours/: personalRecipes.ts  recipeFromYaml.ts  recipeYaml.ts  urlMint.ts  useApplyRecipe.ts
scripts/: make_sample_embedding.py  scaffold_datastack.py  scaffold_feature_explorer.py
tests/: test_examples_endpoint.py  test_manifest_loader.py  test_recipe_registry.py
