[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cave_data_viewer"]

[project]
name = "dash-connectivity-viewer"
version = "2.2.7"
description = "Connectivity viewer for CAVE data — Flask API + React SPA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Casey Schneider-Mizell", email = "caseysm@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    # Core CAVE stack — bumped for TableManager (8.x) and the modern nglui helpers (4.x).
    "caveclient>=8.0.1,<9",
    "nglui>=4.7.4,<5",
    "standard-transform>=1,<2",
    # New API backend
    "flask>=3.0,<4",
    "middle-auth-client>=3.18,<4",
    "flask-cors>=4.0,<5",
    "pydantic>=2.5,<3",
    "pyyaml>=6.0,<7",
    "cachetools>=5.3,<6",
    "gunicorn>=21.2",
    # Data + plotting (server emits Plotly figure JSON)
    "pandas<4",
    "numpy<3",
    "plotly>=5,<7",
    # Optional L2 cache backend (decoration snapshots + synapse dfs).
    # When CDV_GCS_CACHE_BUCKET is unset the import is lazy-only — local
    # dev pays no auth/network cost. Top-level dep so a configured
    # deployment doesn't have to install an extra.
    "google-cloud-storage>=2.14,<4",
    # Note: `requests` is needed transitively (caveclient / nglui /
    # middle-auth-client all pull it) but isn't listed here directly —
    # nothing in our source imports it. `dfbridge`, `loguru`, `orjson`
    # were removed; none were imported in the codebase and none are
    # transitively required. `cloud-volume` / `cloud-files` were similarly
    # removed: nothing in our source imports them, and the
    # `~/.cloudvolume/secrets/cave-secret.json` path convention is read
    # directly by caveclient — it doesn't require the cloud-volume package.
]

[project.scripts]
cdv-check-config = "cave_data_viewer.tools.check_config:main"
cdv-warm-cache = "cave_data_viewer.tools.warm_cache:main"

[project.urls]
Homepage = "https://github.com/ceesem/dash-connectivity-viewer"
"Bug Tracker" = "https://github.com/ceesem/dash-connectivity-viewer/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",
    "bump-my-version",
]
lint = [
    "ruff",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.bumpversion]
current_version = "2.2.7"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "v{new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "cave_data_viewer/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
